--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,8 @@ cog_bundle_version: 4
 name: victorops
 description: Commands for interacting with VictorOps
 version: 0.3.8
+homepage: https://github.com/davejlong/cog-victorops
+author: Dave Long <dlong@cagedata.com>
 docker:
   image: cagedata/victorops-cog
   tag: 0.3.8
